# walkai-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  main.py  mig-values.yml  pyproject.toml  requirements.txt  secret.yml  walkai-api.yaml
.github/workflows/: deploy-api.yml
app/: config.py  database.py  email_sender.py  main.py  models.py  schemas.py  security.py  state_redis_store.py
app/api/: cluster.py  deps.py  jobs.py  password_reset.py  secrets.py  tokens.py  volumes.py
app/bootstrap/: first_user_invite.py
app/core/: aws.py  config.py  database.py  k8s.py  redis.py  s3.py  security.py
app/db/: database.py
app/models/: __init__.py  jobs.py  users.py
app/schemas/: cluster.py  jobs.py  password_reset.py  schedules.py  secrets.py  tokens.py  users.py  volumes.py
app/services/: cluster_service.py  dynamodb_service.py  email_service.py  job_service.py  password_reset_service.py  pat_service.py  quota_service.py  redis_service.py  schedule_service.py  secret_service.py
app/tests/: conftest.py  test_auth.py  test_cluster.py  test_jobs.py  test_password_reset.py  test_quota.py  test_schedules.py  test_secrets.py  test_users.py  test_volumes.py
app/workers/: scheduler.py
migrations/: README  env.py  script.py.mako
migrations/versions/: 0001_initial_schema.py  0a6d28cde5d1_add_quota_resets_and_usage.py  20241209_move_k8s_job_name_to_job_runs.py  222d527f382b_merge_heads.py  5aebf12d5546_add_job_priority.py  5d5c2baf2f09_add_quota_and_jobrun_user.py  (+8 more)
