[project]
name = "walkai-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "fastapi>=0.117.1",
    "httpx>=0.28.1",
    "pydantic[email]>=2.11.9",
    "pydantic-settings>=2.6.1",
    "pyjwt>=2.10.1",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.34",
    "uvicorn>=0.37.0",
    "kubernetes>=34.1.0",
    "boto3>=1.40.59",
    "psycopg[binary]>=3.2.12",
    "alembic>=1.17.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-xdist>=3.8.0",
    "ruff>=0.13.3",
    "ty>=0.0.1a21",
]

[tool.pytest.ini_options]
filterwarnings = ["ignore::sqlalchemy.exc.SAWarning"]
